--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,61 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/* Styling my header, navigation bar, box colors here ------ */
+
+header {
+    width: 800px;
+    margin: 0 auto;
+    font-family: 'Rubik';
+    font-size: .9rem;
+}
+#jumbo-image {
+    margin: 2% 0;
+}
+#nav-bar-top {
+    display: flex;
+    padding: 3% 0;
+}
+#nav-bar-top nav {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 3%;
+}
+#nav-bar-top nav a {
+    text-decoration: none;
+    color: black;
+}
+
+.boxes .box:nth-child(1) {
+    background: teal;
+}
+.boxes .box:nth-child(2) {
+    background: gold;
+}
+.boxes .box:nth-child(3) {
+    background: cadetblue;
+}
+.boxes .box:nth-child(4) {
+    background: coral;
+}
+.boxes .box:nth-child(5) {
+    background: crimson;
+}
+.boxes .box:nth-child(6) {
+    background: forestgreen;
+}
+.boxes .box:nth-child(7) {
+    background: darkorchid;
+}
+.boxes .box:nth-child(8) {
+    background: hotpink;
+}
+.boxes .box:nth-child(9) {
+    background: indigo;
+}
+.boxes .box:nth-child(10) {
+    background: dodgerblue;
+}
