--- a/css/index.css
+++ b/css/index.css
@@ -150,7 +150,7 @@ footer nav a {
 header {
     width: 800px;
     margin: 0 auto;
-    font-family: 'Rubik';
+    font-family: 'Roboto';
     font-size: .9rem;
 }
 #jumbo-image {
