--- a/css/about.css
+++ b/css/about.css
@@ -95,6 +95,7 @@ header {
 #nav-bar-top nav a {
     text-decoration: none;
     color: black;
+    transition: .5s;
 }
 #about-section {
     padding: 1% 2% 2% 2%;
@@ -133,6 +134,7 @@ header {
     border: 2px solid black;
     border-radius: 10px;
     color:black;
+    transition: .6s;
 }
 #details-section1 h3, #details-section2 h3 {
     padding-top: 3%;
@@ -162,7 +164,21 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+    transition: .5s;
 }
 
+#nav-bar-top nav a:hover {
+    transform: scale(1.2);
+    text-decoration: underline;
+}
 
+footer nav a:hover {
+    transform: scale(1.2);
+    text-decoration: underline;
+}
 
+#details-section1 a:hover, #details-section2 a:hover {
+    background: black;
+    color:white;
+    transform: scale(1.05);
+}
