--- a/css/index.css
+++ b/css/index.css
@@ -110,6 +110,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: .8s;
 }
 
 .bottom-content {
@@ -143,6 +144,11 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+    transition: .5s;
+}
+footer nav a:hover {
+    transform: scale(1.2);
+    text-decoration: underline;
 }
 
 /* Styling my header, navigation bar, box colors here ------ */
@@ -170,6 +176,11 @@ header {
 #nav-bar-top nav a {
     text-decoration: none;
     color: black;
+    transition: .5s;
+}
+#nav-bar-top nav a:hover {
+    transform: scale(1.2);
+    text-decoration: underline;
 }
 
 .boxes .box:nth-child(1) {
@@ -201,4 +212,13 @@ header {
 }
 .boxes .box:nth-child(10) {
     background: dodgerblue;
+}
+
+.boxes .box:hover {
+    transform: scale(1.3);
+}
+.boxes .box:hover span {display:none;}
+.boxes .box:hover:before {
+    content: "I could be a link!";
+    text-align: center;
 }
